# follow-heating-rust

./: .env  .gitignore  Cargo.toml  README.md  debug_tests  follow_heating.toml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: rust.yml  rustdoc.yml
ideaRunConfigs/: Test Local.run.xml
src/: io.rs  logging.rs  main.rs  mytime.rs  simulate.rs
src/brain/: dummy.rs  mod.rs
src/brain/boost_active_rooms/: config.rs  mod.rs
src/brain/immersion_heater/: config.rs  mod.rs
src/brain/modes/: circulate.rs  dhw_only.rs  equalise.rs  heat_up_to.rs  intention.rs  mixed.rs  mod.rs  off.rs  on.rs  pre_circulate.rs  try_circulate.rs  turning_on.rs  working_temp.rs
src/brain/modes/heating_mode/: mod.rs  test.rs
src/brain/python_like/: boost_active_rooms.rs  circulate_heat_pump.rs  config.rs  cycling.rs  heating_mode.rs  heatupto.rs  immersion_heater.rs  mod.rs  overrun_config.rs  pump_pulse.rs  test.rs  working_temp.rs
src/brain/python_like/config/: boost_active.rs  heat_pump_circulation.rs  immersion_heater.rs  min_hp_runtime.rs  mod.rs  overrun_config.rs  working_temp_model.rs
src/brain/python_like/control/: devices.rs  heating_control.rs  misc_control.rs  mod.rs
src/brain/python_like/heating_mode/: mod.rs  test.rs  update_result.rs
src/brain/python_like/modes/: circulate.rs  heat_up_to.rs  intention.rs  mod.rs
src/brain/python_like/modes/heating_mode/: mod.rs  test.rs
src/config/: mod.rs
src/io/: dummy.rs  dummy_io_bundle.rs  live_data.rs  mod.rs  robbable.rs
src/io/controls/: heat_circulation_pump.rs  heat_pump.rs  heating_impl.rs  immersion_heater.rs  misc_impl.rs  mod.rs
src/io/devices/: dummy.rs  mod.rs
src/io/gpio/: cdev.rs  dummy.rs  mod.rs  sysfs_gpio.rs  update_db_with_gpio.rs
src/io/temperatures/: database.rs  dummy.rs  file.rs  mod.rs
src/io/wiser/: dbhub.rs  dummy.rs  filehub.rs  hub.rs  mod.rs
src/math/model/: mod.rs
src/time/: mod.rs  mytime.rs  test_utils.rs  timeslot.rs  utils.rs
src/time_util/: mytime.rs  test_utils.rs  timeslot.rs
test/: test_brain_config_with_overrun.toml  test_overrun_scenarios.toml  test_wiser_output.json  testconfig.toml
test/immersion_heater/: basic_model.toml  model.toml
test/overrun_config/: basic.toml  test_overrun_scenarios.toml
test/python_brain/: test_brain_config.toml  test_brain_config_with_overrun.toml  test_overrun_scenarios.toml
test/python_brain/active_devices/: arp-log.txt
test/python_brain/boost_active/: basic.toml
test/python_brain/immersion_heater/: model_part.toml
test/python_brain/multiple_files/: main.toml
test/python_brain/multiple_files/additional/: extra_overrun.toml
test/python_brain/overrun_config/: basic.toml
