[package]
name = "follow_heating"
version = "0.1.0"
authors = ["James <jameshendry05@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.16", default-features = false, features = ['thread-pool'] }
sqlx = { version = "0.5", features = ["mysql", "runtime-async-std-rustls", "bigdecimal", "offline"]}
num-traits = "0.2.14"
async-trait = "0.1.51"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_json = "1.0.71"
tokio = { version = "1.13.0", features = ["rt", "rt-multi-thread", "time", "macros", "signal"] }
ctrlc = { version = "3.2.1", features = ["termination"] }
sysfs_gpio = "0.6.0"
chrono = {version = "0.4.19", features = ["serde"]}
backtrace = "0.3.63"
reqwest = { version = "0.11.6", default-features=false, features = ["rustls-tls"] }
itertools = "0.10.3"